cleaned up some of the javascript. made small tweaks to the css and fixed the page overflow

--- a/style.css
+++ b/style.css
@@ -4,9 +4,21 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 4min;
+}
+
 body{
-    height: 98vh;
-    width: 98vw;
+    height: 100vh;
+    width: 100vw;
+}
+
+body > section {
+    font-size: 0;
+}
+
+.section > * {
+    font-size: 1rem;
 }
 
 .header{
